--- a/package.json
+++ b/package.json
@@ -2,14 +2,42 @@
   "name": "2048-demo",
   "version": "1.0.0",
   "description": "2048 game",
-  "main": "index.js",
+  "main": "/app/main.js",
   "scripts": {
+    "start": "webpack-dev-server --progress --config webpack.dev.config.js --colors",
+    "build": "",
     "test": "mocha test.js"
   },
   "author": "chenzhe",
   "license": "ISC",
-  "dependencies": {
+  "dependencies": {},
+  "devDependencies": {
+    "autoprefixer": "^6.7.7",
+    "babel-core": "^6.24.1",
+    "babel-loader": "^6.4.1",
+    "babel-preset-es2015": "^6.24.1",
     "chai": "^3.5.0",
-    "mocha": "^3.2.0"
-  }
+    "css-loader": "^0.28.0",
+    "extract-text-webpack-plugin": "^2.1.0",
+    "html-loader": "^0.4.5",
+    "html-webpack-plugin": "^2.28.0",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.3",
+    "mocha": "^3.2.0",
+    "postcss-loader": "^1.3.3",
+    "style-loader": "^0.16.1",
+    "webpack": "^2.3.3",
+    "webpack-dev-server": "^2.4.2"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/chenxxzhe/practice-2048.git"
+  },
+  "keywords": [
+    "2048"
+  ],
+  "bugs": {
+    "url": "https://github.com/chenxxzhe/practice-2048/issues"
+  },
+  "homepage": "https://github.com/chenxxzhe/practice-2048#readme"
 }
